--- a/index.html
+++ b/index.html
@@ -1,4 +1,363 @@
 <!DOCTYPE html>
-<HTml>
-    
-</HTml>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>E-Commerce Website</title>
+    <!-- link to css -->
+    <link rel="stylesheet" href="firstPro.css">
+    <!--box icon-->
+    <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+
+     <!-- Link Swiper's CSS -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+</head>
+<body>
+    <!--navbar-->
+    <header>
+        <a href="#" class="logo"> <i class='bx bxs-t-shirt'></i>adidas</a>
+        <ul class="navbar">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#new">New Arrival</a></li>
+            <li><a href="#products">Products</a></li>
+            <li><a href="#reviews">Reviews</a></li>
+            <li><a href="#owner">C.E.O</a></li>
+        </ul>
+        <!--icons-->
+        <div class="header-icon">
+            <i class='bx bx-menu' id="menu-icon"></i>
+            <i class='bx bx-search-alt-2' id="search-icon"></i>
+            <i class='bx bx-cart-alt' id="cart-icon"></i>
+            <i class='bx bx-user' id="user-icon"></i>
+        </div>
+        <!--search box-->
+            <div class="search-box">
+                <input type="text" name="" id="search-icon" placeholder="serch Here...">
+            </div>
+
+
+        <!--cart boxes-->
+        <div class="cart">
+            <!--box1-->
+            <div class="box">
+              <img src="img/new1.png" alt="">
+                <div class="text">
+                  <h3>T-shirt 14A</h3>
+                  <span>$50.05</span>
+                  <span>x1</span>
+                </div>
+                <i class='bx bx-trash' ></i>
+        </div>
+             <!--box 2-->
+            <div class="box">
+              <img src="img/new2.png" alt="">
+                <div class="text">
+                  <h3>T-shirt 14A</h3>
+                  <span>$50.05</span>
+                  <span>x1</span>
+                </div>
+            <i class='bx bx-trash' ></i>
+        </div>
+            <h2>Total: $100.10</h2>
+            <a href="#" class="btn">checkout</a>
+      </div>
+      <!--user-->
+    <form class="user">
+        <h2>Login Now</h2>
+        <input type="email" placeholder="Your Email" autocomplete="username">
+        <input type="password" name="" id="" placeholder="Your Password" autocomplete="current-password">
+        <input type="submit" value="Login" class="login-btn ">
+        <p>Forget Password <a href="#">Reset Now</a></p>
+        <p>Don't have account <a href="#">Create Now</a></p>
+    </form>
+    </header>
+    <!--Home-->
+    <section class="home" id="home">
+        <div class="home-text">
+            <span>Shop Now</span>
+            <h1>New Arrival of <br>Fresh Products</h1>
+            <a href="#" class="btn">Shop Now</a>
+        </div>
+        <div class="home-img">
+            <img src="img/arrival.png" alt="">
+        </div>
+    </section>
+    <!--New Arrival-->
+    <section class="new" id="new">
+        <div class="heading">
+            <h1>New <span>Arrival</span></h1>
+        </div>
+        <div class="swiper new-arrival">
+              <div class="swiper-wrapper">
+                  <div class="swiper-slide box">
+                       <img src="img/th (10).png" alt="">
+                      <div class="content">
+                        <a href="#" class="btn">Buy Now</a>
+                      </div>
+                  </div>
+                  <div class="swiper-slide box">
+                    <img src="img/new2.png" alt="">
+                   <div class="content">
+                     <a href="#" class="btn">Buy Now</a>
+                   </div>
+                 </div>
+                   <div class="swiper-slide box">
+                <img src="img/new3.png" alt="">
+                 <div class="content">
+                 <a href="#" class="btn">Buy Now</a>
+                 </div>
+               </div>
+               <div class="swiper-slide box">
+                <img src="img/new4.png" alt="">
+               <div class="content">
+                 <a href="#" class="btn">Buy Now</a>
+               </div>
+              </div>
+              <div class="swiper-slide box">
+                <img src="img/new5.png" alt="">
+               <div class="content">
+                 <a href="#" class="btn">Buy Now</a>
+               </div>
+              </div>
+              <div class="swiper-slide box">
+                <img src="img/th (14).png" alt="">
+               <div class="content">
+                 <a href="#" class="btn">Buy Now</a>
+               </div>
+            </div>
+        </div>
+    </section>
+    <!--Products-->
+    <section class="products" id="products">
+        <div class="heading">
+            <h1>Our <span>Products</span></h1>
+        </div>
+        <div class="product-container">
+            <div class="box">
+                <img src="img/arrival1.png" alt="">
+                <div class="content">
+                    <h2>T-shirt 14A</h2>
+                  <div class="star">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star-half' ></i>
+                    </div>
+                    <span>$50.05</span>
+                    <i class='bx bx-cart-alt'></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/arrival2.png" alt="">
+                <div class="content">
+                    <h2>T-shirt 14A</h2>
+                  <div class="star">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star-half' ></i>
+                    </div>
+                    <span>$50.05</span>
+                    <i class='bx bx-cart-alt'></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/arrival3.png" alt="">
+                <div class="content">
+                    <h2>T-shirt 14A</h2>
+                  <div class="star">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star-half' ></i>
+                    </div>
+                    <span>$50.05</span>
+                    <i class='bx bx-cart-alt'></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/arrival4.png" alt="">
+                <div class="content">
+                    <h2>T-shirt 14A</h2>
+                  <div class="star">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star-half' ></i>
+                    </div>
+                    <span>$50.05</span>
+                    <i class='bx bx-cart-alt'></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/arrival5.png" alt="">
+                <div class="content">
+                    <h2>T-shirt 14A</h2>
+                  <div class="star">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star-half' ></i>
+                    </div>
+                    <span>$50.05</span>
+                    <i class='bx bx-cart-alt'></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/arrival6.png" alt="">
+                <div class="content">
+                    <h2>T-shirt 14A</h2>
+                  <div class="star">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star-half' ></i>
+                    </div>
+                    <span>$50.05</span>
+                    <i class='bx bx-cart-alt'></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/arrival7.png" alt="">
+                <div class="content">
+                    <h2>T-shirt 14A</h2>
+                  <div class="star">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star-half' ></i>
+                    </div>
+                    <span>$50.05</span>
+                    <i class='bx bx-cart-alt'></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/arrival8.png" alt="">
+                <div class="content">
+                    <h2>T-shirt 14A</h2>
+                  <div class="star">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star-half' ></i>
+                    </div>
+                    <span>$50.05</span>
+                    <i class='bx bx-cart-alt'></i>
+            </Div>
+        </div> 
+    </section>
+<!--Reviews-->
+<section class="reviews" id="reviews">
+    <div class="heading">
+        <h1>Our <span>Customer's</span></h1>
+        <div class="reviews-container">
+            <div class="box">
+                <img src="img/cus.png" alt="">
+                <div class="star">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half' ></i>
+                </div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione doloribus iste, culpa odit dolor beatae doloremque, quas, laudantium quasi laboriosam eos pariatur architecto incidunt itaque molestiae omnis ducimus. Iure, laborum!</p>
+                <h2>Will Smith</h2>
+             </div> 
+             <div class="box">
+              <img src="img/cus2.png" alt="">
+                <div class="star">
+                   <i class='bx bxs-star'></i>
+                   <i class='bx bxs-star'></i>
+                   <i class='bx bxs-star'></i>
+                   <i class='bx bxs-star'></i>
+                   <i class='bx bxs-star-half' ></i>
+                </div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione doloribus iste, culpa odit dolor beatae doloremque, quas, laudantium quasi laboriosam eos pariatur architecto incidunt itaque molestiae omnis ducimus. Iure, laborum!</p>
+             <h2>Will Smith</h2>
+           </div>
+        <div class="box">
+            <img src="img/cus3.png" alt="">
+            <div class="star">
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star-half' ></i>
+            </div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione doloribus iste, culpa odit dolor beatae doloremque, quas, laudantium quasi laboriosam eos pariatur architecto incidunt itaque molestiae omnis ducimus. Iure, laborum!</p>
+            <h2>Will Smith</h2>
+        </div>
+        <div class="box">
+            <img src="img/cus4.png" alt="">
+            <div class="star">
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star-half' ></i>
+            </div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione doloribus iste, culpa odit dolor beatae doloremque, quas, laudantium quasi laboriosam eos pariatur architecto incidunt itaque molestiae omnis ducimus. Iure, laborum!</p>
+            <h2>Will Smith</h2>
+        </div> 
+    </div>
+</section>
+<!--footer-->
+<section class="footer">
+    <div class="footer-box">
+        <h2>adidas</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque repellat placeat explicabo obcaecati recusandae. Atque vero quam facilis, sed vel aliquam et ab inventore reprehenderit explicabo impedit deserunt? Suscipit, nesciunt.</p>
+    </div>
+    <div class="social">
+        <a href="#"><i class='bx bxl-facebook'></i></a>
+        <a href="#"><i class='bx bxl-twitter'></i></a>
+        <a href="#"><i class='bx bxl-instagram'></i></a>
+        <a href="#"><i class='bx bxl-tiktok'></i></a>
+    </div>
+    <div class="footer-box">
+        <h3>support</h3>
+        <li><a href="#">Product</a></li>
+        <li><a href="#">Help & support</a></li>
+        <li><a href="#">Return Policy</a></li>
+        <li><a href="#">Terms of Use</a></li>
+        <li><a href="#">FAQ</a></li>
+    </div>
+    <div class="footer-box">
+        <h3>Our Branches</h3>
+        <li><a href="#">Ikeja</a></li>
+        <li><a href="#">Ibadan</a></li>
+        <li><a href="#">Abuja</a></li>
+        <li><a href="#">Osogbo</a></li>
+        <li><a href="#">Owerri</a></li>
+    </div>
+    <div class="footer-box">
+        <h3>Payment Method</h3>
+        <div class="payment">
+            <img src="img/master.png" alt="">
+            <img src="img/visa.png" alt="">
+            <img src="img/paypal.png" alt="">
+            <img src="img/america.png" alt="">
+        </div>
+    </div>
+</section>
+<!--copyright-->
+<div class="copyright">
+    <p>&#169;Olumyron All Right Reserved</p>
+</div>
+
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <!--link to js-->
+    <script src="firstPro.js"></script>
+</body>
+</html>
