changed page title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Commerce Website</title>
+    <title>Electronic-Commerce Website</title>
     <!-- link to css -->
     <link rel="stylesheet" href="firstPro.css">
     <!--box icon-->
@@ -15,7 +15,7 @@
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 <body>
-    <!--navbar-->
+    <!-- navigation bar-->
     <header>
         <a href="#" class="logo"> <i class='bx bxs-t-shirt'></i>adidas</a>
         <ul class="navbar">
@@ -25,7 +25,7 @@
             <li><a href="#reviews">Reviews</a></li>
             <li><a href="#owner">C.E.O</a></li>
         </ul>
-        <!--icons-->
+        <!--E commerce icons-->
         <div class="header-icon">
             <i class='bx bx-menu' id="menu-icon"></i>
             <i class='bx bx-search-alt-2' id="search-icon"></i>
